--- a/css/cssstyles.css
+++ b/css/cssstyles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: tattooFont;
+    src: url(../fonts/tattooFont.ttf);
+}
+
 *{
 	margin:0;
 	padding:0;
@@ -12,7 +17,6 @@ body{
 }
 #slideShowContainer{
 	width:604px;
-	height:453px;
 	position:relative;
 
 }
@@ -80,28 +84,36 @@ body{
 }
 #TituloPrincipal{
   text-align: center;
-   font-size: 250%
+   font-size: 250%;
+   width:100%;
+
+
 
 }
 
 #contenedorPrincipal {
+ min-height:100%;
+   position:relative;
+   width: 800px;
+  margin: 0 auto;
 
 
- width: 100%;
-height: 700px
 
 }
 #marcoSuperior{
 border:2px solid black;
-height: 100px;
- background-color:#485ED7;
+
+ background-color:silver;
  width:100%;
+  font-family: tattooFont;
+  font-size: 200%;
 
 }
 #ContenedorDeSecciones{
 border:2px solid black;
 width: 100%;
-text-align: center;
+height: 50px;
+text-align: left;
 background-color:#485ED7; 
 
 font-size: 300%;
@@ -116,8 +128,28 @@ font-size: 300%;
 }
 #ContenedorInferior{
 background-color:black;
+ position:absolute;
+   bottom:0;
+   text-align: right;
+   color:white;
+   font-size: 300%;
+
 width: 100%;
 
 height: 100px
+
+}
+#contenedorIntroduccion
+{
+	background-color:blue;
+	color: white;
+	float:left;
+	
+	
+}
+#contenedorEjemplos{
+	height: 300px;
+	width: 100%;
+	background-color: silver;
 
 }
